--- a/geowebcache/pom.xml
+++ b/geowebcache/pom.xml
@@ -49,7 +49,7 @@
     <qa>false</qa>
     <lint>deprecation</lint>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jclouds.version>2.2.0</jclouds.version>
+    <jclouds.version>2.3.0-SNAPSHOT</jclouds.version>
   </properties>
   
   <repositories>
@@ -78,6 +78,13 @@
       <releases>
         <enabled>false</enabled>
       </releases>
+    </repository>
+    <repository>
+      <id>jclouds-snapshots</id>
+      <url>https://repository.apache.org/content/repositories/snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
  
